# zarchive_flutter

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/zarchive/zarchive_flutter/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/ffi/: zarchive_bindings.dart
lib/models/: zarchive_model.dart
lib/providers/: theme_provider.dart
lib/screens/: main_screen.dart  settings_screen.dart
lib/services/: settings_service.dart  zarchive_service.dart
lib/widgets/: archive_explorer.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
zarchive/: CMakeLists.txt  build.sh  sha_256.cc  sha_256.h  zarchive_ffi.cc  zarchive_ffi.h  zarchivecommon.h  zarchivereader.cc  zarchivereader.h  zarchivewriter.cc  zarchivewriter.h
